--- a/style/index.scss
+++ b/style/index.scss
@@ -1,3 +1,18 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  overflow: hidden;
+}
+
 @mixin same-size($sz) {
   width: $sz;
   height: $sz;
@@ -5,12 +20,11 @@
 
 // loader wrapper - can be used as a backdrop to obscure the rest of the page or given a transparent background/use hsla/rgba
 .loader__wrap {
+  display: flex;
   position: fixed;
   left: 0;
   top: 0;
   @include same-size(100%);
-  display: flex;
-  // z-index: 1; // fine for this demo
 }
 
 // container for animation
@@ -39,7 +53,7 @@
   &::before,
   &::after {
     @include same-size(var(--p-sz));
-    content: "";
+    content: '';
     position: relative;
     // transform is what's being animated
     transform: translateY(calc((var(--sz) - var(--p-sz)) * -1));
@@ -98,21 +112,29 @@
 
 // general page styles
 .top-bg {
-  position: relative;
-  background-color: #73cfec;
-  z-index: 99;
-  height: 50%;
-  transform: translateY(-100%);
-  transition: all 3s ease 1.5s;
-}
-
-.bottom-bg {
-  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
   background-color: #73cfec;
   z-index: 99;
   height: 50vh;
-  transform: translateY(100%);
-  transition: all 3s ease 1.5s;
+  animation: slide-top-bg 3s linear;
+  animation-iteration-count: 1;
+  opacity: 0;
+}
+
+.bottom-bg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #73cfec;
+  z-index: 99;
+  height: 50vh;
+  animation: slide-bottom-bg 3s linear;
+  animation-iteration-count: 1;
+  opacity: 0;
 }
 
 .footer {
@@ -122,41 +144,29 @@
   width: 100%;
   height: 78px;
   background-color: #1f1f1f;
-  font-family: "Crimson Pro", serif;
+  font-family: 'Crimson Pro', serif;
   font-size: 16px;
   color: #ffffff;
 }
 
 @keyframes slide-top-bg {
   0% {
-    height: 50%;
+    opacity: 1;
+    transform: translateY(0);
   }
   100% {
-    height: 0%;
+    transform: translateY(-100%);
+    opacity: 0;
   }
 }
+
 @keyframes slide-bottom-bg {
   0% {
-    height: 100vh;
-    transform: translateY(50%);
+    opacity: 1;
+    transform: translateY(0);
   }
   100% {
-    height: 100vh;
     transform: translateY(100%);
+    opacity: 0;
   }
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #fff;
-  overflow: hidden;
 }
