--- a/style/welcome.css
+++ b/style/welcome.css
@@ -1,13 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Passion+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@700&display=swap');
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 
 body,
 html {
   height: 100%;
   width: 100%;
-  background-image: url("../assets/welcome-bg.png");
+  background-image: url('../assets/welcome-bg.png');
   background-size: cover;
   margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -59,7 +66,7 @@ html {
   justify-content: center;
   text-align: center;
   margin: 0;
-  font-family: "Passion One", cursive;
+  font-family: 'Passion One', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
@@ -67,7 +74,7 @@ html {
 }
 
 .greeting-text {
-  font-family: "Passion One";
+  font-family: 'Passion One';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
@@ -78,7 +85,7 @@ html {
 .greeting-hi {
   text-align: center;
   margin: 0;
-  font-family: "Passion One", cursive;
+  font-family: 'Passion One', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -88,7 +95,7 @@ html {
 .greeting-name {
   text-align: center;
   margin: 0;
-  font-family: "Passion One", cursive;
+  font-family: 'Passion One', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 48px;
@@ -101,7 +108,7 @@ html {
   width: 300px;
   height: 55px;
   margin: 0 50px;
-  font-family: "Passion One", cursive;
+  font-family: 'Passion One', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
@@ -119,7 +126,7 @@ html {
   width: 80%;
 }
 .checkbox-label {
-  font-family: "Passion One";
+  font-family: 'Passion One';
   font-style: normal;
   font-size: 18px;
   text-align: justify;
@@ -133,7 +140,7 @@ html {
   width: 100%;
   height: 78px;
   background-color: #1f1f1f;
-  font-family: "Crimson Pro", serif;
+  font-family: 'Crimson Pro', serif;
   font-size: 16px;
   color: #ffffff;
 }
