--- a/style/welcome.css
+++ b/style/welcome.css
@@ -13,31 +13,45 @@ html {
   width: 100%;
   background-image: url('../assets/welcome-bg.png');
   background-size: cover;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  height: 100%;
+}
+main {
+  max-width: 428px;
+  margin: 0 auto;
 }
 
 .container {
+  width: 100%;
   overflow: hidden;
   display: flex;
+  position: relative;
 }
 
 .ribbon {
+  position: absolute;
   animation: ribbon-slide 2s ease;
+  margin: 0 auto;
+  width: 100%;
+  display: block;
+  z-index: 0;
 }
 
 .content {
-  position: absolute;
-  display: flex;
-  height: 100vh;
+  z-index: 1;
+  width: 100%;
+  padding: 0 1.5rem;
 }
 
 .img-wrapper {
-  position: absolute;
-  margin-top: 70px;
-  margin-left: 20px;
-  width: 100%;
+  margin: 0 auto;
+  margin-top: 72px;
+  width: 267px;
   overflow: hidden;
+}
+.img-wrapper img {
+  width: 100%;
 }
 
 .content-pic {
@@ -47,18 +61,7 @@ html {
 }
 
 .title {
-  margin-top: 330px;
-}
-
-.greeting {
-  position: absolute;
-  margin-top: 380px;
-  width: 100vw;
-}
-
-.title-text {
-  text-align: center;
-  margin: 0;
+  margin-top: 32px;
 }
 
 .celebrate-text {
@@ -73,8 +76,13 @@ html {
   color: #ffffff;
 }
 
+.greeting {
+  margin-top: 64px;
+  width: 100%;
+  font-family: 'Passion One', cursive;
+}
+
 .greeting-text {
-  font-family: 'Passion One';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
@@ -85,7 +93,6 @@ html {
 .greeting-hi {
   text-align: center;
   margin: 0;
-  font-family: 'Passion One', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
@@ -95,7 +102,6 @@ html {
 .greeting-name {
   text-align: center;
   margin: 0;
-  font-family: 'Passion One', cursive;
   font-style: normal;
   font-weight: 400;
   font-size: 48px;
@@ -104,10 +110,35 @@ html {
   animation: name-slide 2s ease;
 }
 
+.checkbox {
+  margin-top: 56px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox input {
+  outline: 2px solid #464646;
+  background-color: transparent;
+}
+
+.checkbox-label {
+  font-family: 'Passion One', cursive;
+  font-style: normal;
+  font-size: 18px;
+  text-align: justify;
+  color: #464646;
+  margin-left: 14px;
+}
+
+.btn-wrapper {
+  margin-top: 16px;
+}
+
 .btn {
-  width: 300px;
+  width: 100%;
   height: 55px;
-  margin: 0 50px;
   font-family: 'Passion One', cursive;
   font-style: normal;
   font-weight: 400;
@@ -117,26 +148,13 @@ html {
   border-radius: 10px;
   border: none;
 }
-.checkbox {
-  margin: 56px 40px 16px 40px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  width: 80%;
-}
-.checkbox-label {
-  font-family: 'Passion One';
-  font-style: normal;
-  font-size: 18px;
-  text-align: justify;
-  color: #464646;
-  margin-left: 14px;
-}
+
 .footer {
+  margin-top: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 78px;
   background-color: #1f1f1f;
