--- a/style/main.css
+++ b/style/main.css
@@ -145,6 +145,13 @@ header {
   z-index: 0;
 }
 
+.icon-flag-2 {
+  width: 100%;
+  position: sticky;
+  transform: translateY(-100px);
+  z-index: 0;
+}
+
 .stories {
   position: relative;
   text-align: center;
@@ -195,6 +202,9 @@ header {
   margin: 0 auto;
   margin-top: 24px;
   position: relative;
+  overflow: hidden;
+  height: 100vmin;
+  z-index: 1;
 }
 
 .photos figure img {
@@ -212,7 +222,31 @@ header {
 
 .photo-show {
   opacity: 1 !important;
-  transform: translateX(0) !important;
+  transform: translateY(0) !important;
+}
+
+.message {
+  color: #000000;
+  text-align: center;
+  padding: 0 35px;
+  max-width: 400px;
+  margin: 0 auto;
+  font-size: 20px;
+}
+
+.footer {
+  margin: 0;
+  margin-top: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 78px;
+  background-color: #1f1f1f;
+  font-family: 'Crimson Pro', serif;
+  font-size: 16px;
+  color: #ffffff;
 }
 
 @media screen and (min-width: 420px) {
@@ -221,5 +255,14 @@ header {
   }
   .icon-flag {
     transform: translateY(-88px);
+  }
+  .icon-flag-2 {
+    transform: translateY(-146px);
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .icon-flag-2 {
+    transform: translateY(-190px);
   }
 }
