--- a/style/photos.css
+++ b/style/photos.css
@@ -35,38 +35,38 @@ figure:nth-child(7) img {
 
 figure:nth-child(2) {
   opacity: 0;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
 }
 
 figure:nth-child(3) {
   opacity: 0;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
 }
 
 figure:nth-child(4) {
   opacity: 0;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
 }
 
 figure:nth-child(5) {
   opacity: 0;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
 }
 
 figure:nth-child(6) {
   opacity: 0;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
 }
 
 figure:nth-child(7) {
   opacity: 0;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
 }
 
 figure img {
